# w3

./: .gitignore  Cargo.toml  README.md  Trunk.toml  flake.nix  implementation-plan.md  index.html  initiate-cim.md  justfile  readme.md  rust-toolchain.toml  tailwind.config.js  tasks.md  usage.md
.cursor/rules/: cim-start.mdc  main.mdc  rust.mdc  system-overview.mdc
doc/: cim-hardware.md  eda.md  observables.md]  problem-scope.md  readme-cim.md  techstack.md
docs/: architecture.md  dashboard.md  style-guide.md
docs/archive/: completed_tasks.md
docs/notes/: 000-decision-template.md  001-multi-tier-scaling-architecture.md  002-nats-jetstream-dual-role.md  003-nixos-hyperconverged-implementation.md  004-business-focus-and-audience.md  005-domain-driven-vertical-markets.md  006-domain-objects-graph-storage.md  007-service-interfaces-and-mcp-integration.md  008-base-cim-services.md  009-cross-domain-interaction-patterns.md  010-domain-event-flow-patterns.md  011-ipld-content-addressable-storage.md  012-primary-user-interfaces.md  013-security-architecture.md  014-component-specifications.md  015-component-interfaces.md  README.md  domain-objects.md
domain/: README.md  bounded-context.md  category.md
domain/common/: person.cypher
domain/events/: messagesent.nix
domain/vertical/: it_services.cypher  patient.cypher  private_lending.cypher
memory-bank/: activeContext.md  design-system-documentation.md  domainPatterns.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  system_design.md  task_archiving.md  tasks.md  techContext.md
modules/: buildInputs.wayland.nix  buildPackage.nix  buildimage.nix  configuration.nix  devshell.nix  env.nix  generateContainer.nix  generateVM.nix  helix.nix  nats.nix  packages.nix  users.nix
modules/sets/: env.nix
src/: conversation.rs  echo.rs  main.rs  nats.rs  styles.rs
tests/: containerTest.nix  rustPackageBuildTest.nix  test-build.nix  test-container.nix  test-vm.nix  vmTest.nix
www/: Cargo.toml  README.md  index.html  styles.css  tailwind.config.js
(+54 files in other folders)
