[package]
name = "cim"
version = "0.6.0"
authors = ["Steele Price <steele@thecowboy.ai>"]
edition = "2021"
publish = false

[dependencies]
iced.workspace = true
iced.features = ["debug", "tokio"]

warp = "0.3"

[dependencies.async-tungstenite]
version = "0.25"
features = ["tokio-rustls-webpki-roots"]

[dependencies.tokio]
workspace = true
features = ["time"]
