[package]
name = "cim"
version = "0.6.0"
authors = ["Steele Price <steele@thecowboy.ai>"]
edition = "2021"
publish = false

# Add profile settings for faster compilation
[profile.dev]
incremental = true
debug = 1          # Reduce debug symbol generation
opt-level = 0      # No optimization for faster builds
lto = false        # Disable link-time optimization in dev

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
iced = { version = "0.12", features = ["debug", "tokio"] }
async-nats = "0.33"
futures = "0.3"

[dependencies.tokio]
version = "1.35"
features = [
    "full",
] # Including full since you'll likely need more features for an Iced app
