[package]
name = "w3"
version = "0.1.0"
edition = "2021"
description = "W3 Project with Crystalline Neon design system"

[dependencies]
leptos = { version = "0.5", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5", features = ["csr", "nightly"] }
leptos_router = { version = "0.5", features = ["csr", "nightly"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "CssStyleDeclaration",
    "Event",
    "MouseEvent",
] }
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 